--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config": "~9.0.0",
-    "@expo/config-plugins": "~8.0.0",
+    "@expo/config": "^11.0.0",
+    "@expo/config-plugins": "~10.0.0",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@supabase/supabase-js": "^2.39.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
-    "expo": "~51.0.28",
+    "expo": "~53.0.0",
     "expo-apple-authentication": "^7.2.4",
     "expo-constants": "^17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^7.1.5",
-    "expo-router": "~3.5.14",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.26.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-purchases": "^8.11.5",
     "react-native-purchases-ui": "^8.11.5",
-    "react-native-safe-area-context": "^5.5.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
