--- a/package.json
+++ b/package.json
@@ -12,26 +12,34 @@
     "@expo/config": "^11.0.0",
     "@expo/config-plugins": "~10.0.0",
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@supabase/supabase-js": "^2.39.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "expo": "~53.0.0",
     "expo-apple-authentication": "^7.2.4",
+    "expo-build-properties": "^0.14.6",
     "expo-constants": "^17.1.6",
+    "expo-crypto": "^14.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^7.1.5",
+    "expo-notifications": "^0.31.3",
     "expo-router": "~5.1.0",
+    "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-purchases": "^8.11.5",
     "react-native-purchases-ui": "^8.11.5",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
+    "react-native-store-review": "^0.4.3",
     "react-native-url-polyfill": "^2.0.0",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5",
