--- a/app.json
+++ b/app.json
@@ -14,14 +14,16 @@
       "backgroundColor": "#FDF8F6"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ritchi1.solaceuidemo"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.ritchi1.solaceuidemo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -37,7 +39,12 @@
         }
       ],
       "expo-router",
-      "@react-native-google-signin/google-signin",
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.YOUR_IOS_REVERSED_CLIENT_ID"
+        }
+      ],
       "expo-apple-authentication"
     ]
   }
