--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.ritchi1.solaceuidemo"
+      "bundleIdentifier": "com.dorghaamhaidar.solace.iphone",
+      "storeKitConfigurationPath": "./Product_StoreKit_Config.storekit",
+      "googleServicesFile": "./ios/GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
@@ -23,7 +25,7 @@
         "backgroundColor": "#FFFFFF"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.ritchi1.solaceuidemo"
+      "package": "com.dorghaamhaidar.solace.android"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -42,7 +44,7 @@
       [
         "@react-native-google-signin/google-signin",
         {
-          "iosUrlScheme": "com.googleusercontent.apps.YOUR_IOS_REVERSED_CLIENT_ID"
+          "iosUrlScheme": "com.googleusercontent.apps.791966352436-ds9guvagr07rk1fhr5dua5feob3i16vc"
         }
       ],
       "expo-apple-authentication"
