--- a/ios/Solace.xcodeproj/xcshareddata/xcschemes/Solace.xcscheme
+++ b/ios/Solace.xcodeproj/xcshareddata/xcschemes/Solace.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "solaceuidemo.app"
-               BlueprintName = "solaceuidemo"
-               ReferencedContainer = "container:solaceuidemo.xcodeproj">
+               BuildableName = "Solace.app"
+               BlueprintName = "Solace"
+               ReferencedContainer = "container:Solace.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "solaceuidemoTests.xctest"
-               BlueprintName = "solaceuidemoTests"
-               ReferencedContainer = "container:solaceuidemo.xcodeproj">
+               BuildableName = "SolaceTests.xctest"
+               BlueprintName = "SolaceTests"
+               ReferencedContainer = "container:Solace.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "solaceuidemo.app"
-            BlueprintName = "solaceuidemo"
-            ReferencedContainer = "container:solaceuidemo.xcodeproj">
+            BuildableName = "Solace.app"
+            BlueprintName = "Solace"
+            ReferencedContainer = "container:Solace.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "solaceuidemo.app"
-            BlueprintName = "solaceuidemo"
-            ReferencedContainer = "container:solaceuidemo.xcodeproj">
+            BuildableName = "Solace.app"
+            BlueprintName = "Solace"
+            ReferencedContainer = "container:Solace.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
