everything works some bugs but SO MUCH PROGRESS FOR FIRST DAY

--- a/ios/Solace/Info.plist
+++ b/ios/Solace/Info.plist
@@ -30,7 +30,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>solaceapp</string>
-          <string>com.ritchi1.solaceuidemo</string>
+          <string>com.dorghaamhaidar.solace.iphone</string>
         </array>
       </dict>
       <dict>
