--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-build-properties": "^0.14.6",
     "expo-constants": "^17.1.6",
     "expo-crypto": "^14.1.5",
+    "expo-dev-client": "^5.2.1",
     "expo-font": "~13.3.1",
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
