--- a/ios/SolaceWidgetExtension.entitlements
+++ b/ios/SolaceWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
     <key>com.apple.security.application-groups</key>
     <array>
-        <string>group.com.dorghaamhaidar.solace.iphone.widget</string>
+        <string>group.com.dorghaamhaidar.solace.iphone</string>
     </array>
 </dict>
 </plist> 
