--- a/ios/Solace/Solace.entitlements
+++ b/ios/Solace/Solace.entitlements
@@ -9,6 +9,7 @@
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.dorghaamhaidar.solace.iphone</string>
+		<string>group.com.dorghaamhaidar.solace.iphone.widget</string>
 	</array>
 </dict>
 </plist>
