--- a/ios/SolaceWidgetExtensionExtension.entitlements
+++ b/ios/SolaceWidgetExtensionExtension.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
+		<string>group.com.dorghaamhaidar.solace.iphone</string>
 		<string>group.com.dorghaamhaidar.solace.iphone.widget</string>
 	</array>
 </dict>
