--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-mmkv-storage": "^0.11.2",
     "react-native-purchases": "^8.11.5",
     "react-native-purchases-ui": "^8.11.5",
     "react-native-reanimated": "~3.17.4",
