--- a/package.json
+++ b/package.json
@@ -22,19 +22,25 @@
     "crypto-browserify": "^3.12.1",
     "expo": "~53.0.0",
     "expo-apple-authentication": "^7.2.4",
+    "expo-application": "~6.1.5",
     "expo-build-properties": "^0.14.6",
     "expo-constants": "^17.1.6",
     "expo-crypto": "^14.1.5",
     "expo-dev-client": "^5.2.1",
+    "expo-device": "~7.1.4",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "^14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "^7.1.5",
+    "expo-localization": "~16.1.6",
     "expo-notifications": "^0.31.3",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
     "lottie-react-native": "^7.2.3",
+    "posthog-react-native": "^4.1.4",
+    "posthog-react-native-session-replay": "^1.1.1",
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
